--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -19,10 +19,10 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="col-md-12 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
       {% for p in pears %}
       <div class="card bg-light mb-3 themes" style="width: 18rem; margin:20px;">
-	      <div class="card-header" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);"><b>{{gettext("Theme:")}} {{p[0]}}</b></div>
+	      <div class="card-header" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);"><b>{{gettext("Theme:")}} {{p[0]}} ({{p[3]}})</b></div>
                 <div class="card-body" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);">
 	          <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
-		  <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
+		  <a href="{{url_for('orchard.get_a_pod')}}?theme={{p[0]}}&lang={{p[3]}}" class="btn btn-success">{{gettext("View")}}</a>
 		  {% if p[0] != 'Tips' %}
 		  {% if current_user.is_authenticated and current_user.is_confirmed and current_user.is_admin %}
 	          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{p[2]}}" aria-expanded="false" aria-controls="collapse{{p[2]}}"><img src="{{ url_for('static', filename='pencil-outline.svg')}}" class='ion-icon'/></button>
@@ -34,6 +34,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 		      <form  action="{{url_for('orchard.rename_pod')}}" id='renameform'>
                   <div class="input-group group mt-4" >
 		  <input type="hidden" value="{{p[0]}}" name="oldname" />
+      <input type="hidden" value="{{p[3]}}" name="lang" />
 	          <input class="form-control" title="Rename theme" placeholder="{{gettext('Rename theme')}}"  type="search" name='newname' required>
          	  <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>{{gettext('Rename')}}</button>
                   </div>
