--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -37,7 +37,9 @@ SPDX-License-Identifier: AGPL-3.0-only
 	<datalist id="themes"></datalist>
         {{ form1.hidden_tag() }}
         <p>{{ render_field(form1.suggested_url) }}</p>
-        <p>{{ render_autocomplete_field(form1.theme) }}</p>
+        {% if not single_pod_indexing %}
+          <p>{{ render_autocomplete_field(form1.theme) }}</p>
+        {% endif %}
         <p>{{ render_field(form1.note) }}</p>
         <div class="form-check">
           {{ form1.accept_tos(class_="form-check-input") }}
