--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -19,7 +19,13 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="col-md-12 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
       {% for p in pears %}
       <div class="card bg-light mb-3 themes" style="width: 18rem; margin:20px;">
-	      <div class="card-header" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);"><b>{{gettext("Theme:")}} {{p[0]}} ({{p[3]}})</b></div>
+	      <div class="card-header" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);">
+        {% if single_pod_indexing %}
+          <b>{{p[3]}}</b>
+        {% else %}
+          <b>{{gettext("Theme:")}} {{p[0]}} ({{p[3]}})</b>
+        {% endif %}
+        </div>
                 <div class="card-body" style="border-bottom: var(--bs-card-border-width) solid var(--text-color);">
 	          <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
 		  <a href="{{url_for('orchard.get_a_pod')}}?theme={{p[0]}}&lang={{p[3]}}" class="btn btn-success">{{gettext("View")}}</a>
