--- a/app/templates/indexer/suggest.html
+++ b/app/templates/indexer/suggest.html
@@ -27,8 +27,10 @@ SPDX-License-Identifier: AGPL-3.0-only
 	<form method="POST" accept-charset="UTF-8" action="{{url_for('indexer.run_suggest_url')}}" enctype="multipart/form-data" autocomplete="off">
 	<datalist id="themes"></datalist>
         {{ form.hidden_tag() }}
-	<p>Thank you for suggesting a resource to this PeARS instance! PeARS is a curated search engine. An admin will review your entry asap. Suggestions are normally accepted 
-	unless they contain offensive content or do not match the theme of the instance. We aim at indexing your entry within 24-48 hours.</p>
+	<p>Thank you for suggesting a resource to this PeARS instance! PeARS is a curated search engine. An admin will review your entry asap.</p>
+	{% if internal_message %}
+	<p><b>NB: </b>{{ internal_message }}</p>
+	{% endif %}
         <p>{{ render_field(form.suggested_url) }}</p>
         <p>{{ render_autocomplete_field(form.theme) }}</p>
         <p>{{ render_field(form.note) }}</p>
