--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -72,7 +72,16 @@ SPDX-License-Identifier: AGPL-3.0-only
 
 	      <p class="card-text small"><a href="{{result['display_url']}}" class="card-link">{{result['url']}}</a></p><!-- explicit link-->
 	      <p class="card-text small" style="margin-top:-10px">
-              <br>{{result['snippet']|safe}}<!--snippet-->
+              <br>
+              <span>{{result['shortened_snippet']|safe}}<!--snippet--></span>
+              {% if result['expandable_snippet'] %}
+    	        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#expanded-snippet-{{result['id']}}" aria-expanded="false" aria-controls="expanded-snippet-{{result['id']}}">
+                <small>[show/hide longer snippet]</small>
+              </button>
+              <div class="collapse" id="expanded-snippet-{{result['id']}}">
+                <p class="card-text small p-3 text-bg-dark"><em>{{result['snippet']|safe}}</em></p>
+              </div>
+              {% endif %}
               {% if result['notes'] != None %}
 	        <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{result['id']}}" aria-expanded="false" aria-controls="collapse{{result['id']}}">
 	          <img src="{{ url_for('static', filename='note.png')}}" width='30px' />
